--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@asymmetrik/ngx-leaflet": "^14.0.0",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.8.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -31,6 +33,7 @@
     "@angular/compiler-cli": "^14.0.0",
     "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.7.11",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
