--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.0.0",
     "@types/leaflet": "^1.7.11",
+    "@types/node": "^18.0.6",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
